--- a/RLHF-LLM-PPO/RLHF_LLM_PPO.ipynb
+++ b/RLHF-LLM-PPO/RLHF_LLM_PPO.ipynb
@@ -29,7 +29,7 @@
         "\n",
         "- *Transition*:\n",
         "\n",
-        "    Suppose we take action $a_t$ in state $u_t$. Then the next state $s_{t+1}=s_t + u_t$, which means appending $u_t$ to the end of $s_t$.\n",
+        "    Suppose we take action $u_t$ in state $s_t$. Then the next state $s_{t+1}=s_t + u_t$, which means appending $u_t$ to the end of $s_t$.\n",
         "\n",
         "- *Reward*:\n",
         "    \n",
