--- a/RLHF-LLM-PPO/RLHF_LLM_PPO.ipynb
+++ b/RLHF-LLM-PPO/RLHF_LLM_PPO.ipynb
@@ -33,7 +33,7 @@
         "\n",
         "- *Reward*:\n",
         "    \n",
-        "    At the end of the sequence, a reward will be given for the total trajectory. We will use a classifier to analyze the sentiment of the produced sentences and use the classifier's outputs as rewards signals. We will use the classifier \"lvwerra/distilbert-imdb\" in [2].\n",
+        "    At the end of the trajectory, a reward will be given for the total trajectory. We will use a classifier to analyze the sentiment of the produced sentences and use the classifier's outputs as rewards signals. We will use the classifier \"lvwerra/distilbert-imdb\" in [2].\n",
         "\n",
         "- *Objective*: Maximize the expected reward.\n",
         "\n",
