--- a/RLHF-LLM-PPO/RLHF_LLM_PPO.ipynb
+++ b/RLHF-LLM-PPO/RLHF_LLM_PPO.ipynb
@@ -5,6 +5,8 @@
       "source": [
         "# Chapter 7 Variations of Policy Gradient Algorithms\n",
         "\n",
+        "This notebook was created by Kellen Kanarios (kellenkk@umich.edu).\n",
+        "\n",
         "## Example: Reinforcement Learning with Human Feedback (RLHF) for Positive Movie Reviews\n",
         "\n",
         "In this notebook, we will use proximal policy optimization (PPO) to finetune a large language model (LLM) for more positive movie reviews.\n",
@@ -52,12 +54,7 @@
         "\n",
         "[2] https://huggingface.co/lvwerra/distilbert-imdb\n",
         "\n",
-        "[3] The following was used as starter code https://github.com/huggingface/trl/blob/main/examples/notebooks/gpt2-sentiment.ipynb\n",
-        "\n",
-        "### Acknowledgement\n",
-        "\n",
-        "This example was created by Kellen Kanarios (kellenkk@umich.edu).\n",
-        "\n"
+        "[3] The following was used as starter code https://github.com/huggingface/trl/blob/main/examples/notebooks/gpt2-sentiment.ipynb\n"
       ],
       "metadata": {
         "id": "LYG9KKi8ji8o"
