--- a/RLHF-LLM-PPO/RLHF_LLM_PPO.ipynb
+++ b/RLHF-LLM-PPO/RLHF_LLM_PPO.ipynb
@@ -198,7 +198,7 @@
       },
       "outputs": [],
       "source": [
-        "wandb.init()"
+        "wandb.login()"
       ]
     },
     {
@@ -518,6 +518,8 @@
       },
       "outputs": [],
       "source": [
+        "%%wandb\n",
+        "\n",
         "for epoch, batch in tqdm(enumerate(ppo_trainer.dataloader)):\n",
         "    query_tensors = batch[\"input_ids\"]\n",
         "\n",
