--- a/RLHF-LLM-PPO/RLHF_LLM_PPO.ipynb
+++ b/RLHF-LLM-PPO/RLHF_LLM_PPO.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Chapter 7 Variations of Policy Gradient Algorithms\n",
+    "# Variations of Policy Gradient Algorithms\n",
     "\n",
     "This notebook was created by Kellen Kanarios (kellenkk@umich.edu).\n",
     "\n",
