--- a/pendulum-swingup/pendulum_swingup_PPO.ipynb
+++ b/pendulum-swingup/pendulum_swingup_PPO.ipynb
@@ -6,7 +6,7 @@
         "id": "sjm8m0WffM44"
       },
       "source": [
-        "# Chapter 7 Variations of Policy Gradient Algorithms\n",
+        "# Variations of Policy Gradient Algorithms\n",
         "\n",
         "This notebook was created by Chenshun Ni (nichensh@umich.edu).\n",
         "\n",
